# Bankov

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md
documentacao/: Apresentação sem título.pptx
installer/: BankovInstaller.nsi  _copy_from_C_raylib.ps1  _search_dlls.ps1  check_and_copy_minGW_bin.ps1  package_for_installer.ps1  search_and_copy_raylib.ps1
src/: Board.cpp  Board.hpp  Event.cpp  Event.hpp  FII.cpp  FII.hpp  Game.cpp  Game.hpp  Player.cpp  Player.hpp  Property.cpp  Property.hpp  Stock.cpp  Stock.hpp  main.cpp
